# anypost-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: send.py  send_async.py
src/anypost/: __init__.py  _async_http.py  _base64.py  _client.py  _exceptions.py  _http.py  _pagination.py  _version.py  _webhook_signature.py
src/anypost/_async/: __init__.py  client.py  resources.py
src/anypost/resources/: __init__.py  api_keys.py  domains.py  email.py  events.py  identity.py  suppressions.py  templates.py  webhooks.py
src/anypost/types/: __init__.py  api_key.py  common.py  domain.py  email.py  event.py  identity.py  suppression.py  template.py  webhook.py
tests/: conftest.py  test_async.py  test_client.py  test_email.py  test_errors.py  test_pagination.py  test_resources.py  test_retries.py  test_webhook_signature.py
